fix(release): 第四轮红队审查全量闭环（1 P0/9 P1/33 P2 + 第三轮残留全修），门禁实测 1206 测试全绿并重裁决 GO 88/100
- P0：release.yml 的 publish job 补 Redis service（此前含 IT 标定阈值的覆盖率门禁必然失败、deploy 永不执行）
- P1：PEL 认领脚本改 pcall + 补偿（XADD 失败不再静默丢消息）+ 认领前目的键类型自检；
  JdkSerializer 修复 JEP 290 对回引用（serialClass==null）的误杀；CVE 门禁改为无密钥可跑的
  SBOM + OSV 硬门禁（OWASP/NVD 传参修复，仅在有 key 时增强深扫）
- 残留项根因修复：顺序消费锁竞争不再消耗重试预算（新增 OrderlyShardBusyException，未处理消息不再进 DLQ）；
  广播身份文件按 namespace+group 分片 + id/pid/ts 多记录（不覆盖活进程身份）；租约心跳独立线程；
  pel-claim-min-idle ≥ 3×心跳校验；PEL 扫描游标分页；事务 MISSING 显式降级；
  Jackson 2.17.2→2.18.10；序列化器 null 语义统一与读写边界加固；consumeThreads 收敛 min/max 语义陷阱；
  移除 ConsumeAction.DEFER 死常量与 StreamMQEventBus 死 SPI
- CI/发布：tripwire 按模块下限、japicmp 禁止静默跳过并清理死 exclude、staging 反向断言动态化、
  未 pin 插件固定版本、concurrency/SHA pin/timeout 加固、benchmark 工作流修复 + 基准口径有效性判定
- 文档：README 双语/配置参考/SECURITY/NOTICE/CONTRIBUTING/IDE 元数据/演示脚本与代码事实全量对齐
- 测试：新增 11 个失败即红用例文件、13 处零断言改显式断言、8 个样本 IT 跨运行隔离；
  streammq-test 纳入覆盖率门禁并按实测-3pt 校准（0.78/0.39）

验证：mvn clean verify -Djacoco.check.skip=false → 20/20 模块 SUCCESS，1206 测试（958 单测 + 248 IT），
0 失败/错误/跳过，覆盖率门禁全绿。逐项证据与裁决见 docs/REPORT.md（第四轮）。